--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
 	<groupId>org.aludratest</groupId>
 	<artifactId>aludratest</artifactId>
-	<version>3.1.0-SNAPSHOT</version>
+	<version>3.2.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>AludraTest</name>
@@ -523,7 +522,11 @@
 				<!-- fixes a bug with 2.3 and 2.4 (commits were not pushed) -->
 				<version>2.5.1</version>
 			</plugin>
-
+		<plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-deploy-plugin</artifactId>
+		    <version>2.8.2</version>
+		</plugin>
 		</plugins>
 
 		<pluginManagement>
@@ -727,7 +730,7 @@
 		<url>https://github.com/AludraTest/aludratest/issues</url>
 		<system>GitHub Issues</system>
 	</issueManagement>
-
+<!-- 
 	<distributionManagement>
 		<snapshotRepository>
 			<id>ossrh</id>
@@ -738,11 +741,11 @@
 			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
 		</repository>
 		<site>
-			<!-- this is not used at all, as GitHub site-deploy is used. But site 
-				Plugin requires this to be here to work! -->
+			this is not used at all, as GitHub site-deploy is used. But site 
+				Plugin requires this to be here to work!
 			<id>local-dummy</id>
 			<url>file:/./target/site-deployment</url>
 		</site>
 	</distributionManagement>
-
+ -->
 </project>
